--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,52 @@
-
+html,
+body {
+  height: 100%;
+  font-size: 12pt;
+}
+html .container-fluid .test,
+body .container-fluid .test {
+  background-color: #741313;
+  color: white;
+  height: 100px;
+  width: 100%;
+}
+html .container-fluid main,
+body .container-fluid main {
+  height: 100vh;
+  color: white;
+  background-color: black;
+}
+html .container-fluid main .box,
+body .container-fluid main .box {
+  background-color: #1d1d1d;
+  margin-top: 30px;
+  padding: 20px;
+}
+html .container-fluid main .box .large-btn,
+body .container-fluid main .box .large-btn {
+  margin-top: 10px;
+}
+html .container-fluid main .box label,
+body .container-fluid main .box label {
+  font-size: 1.3rem;
+}
+html .container-fluid main .box input,
+body .container-fluid main .box input {
+  margin-bottom: 10px;
+}
+html .container-fluid main .box ul,
+body .container-fluid main .box ul {
+  width: 100%;
+}
+html .container-fluid main .box ul li,
+body .container-fluid main .box ul li {
+  list-style-type: none;
+  width: 100%;
+  padding-top: 10px;
+}
+html .container-fluid main .box ul li button,
+body .container-fluid main .box ul li button {
+  margin-right: 10px;
+}
 
 /*# sourceMappingURL=main.css.map */
