Implemented function of adding items to list

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@ body {
       .box {
         background-color: $boxcolor;
         margin-top: 30px;
+        margin-bottom: 30px;
         padding: 20px;
         .large-btn {
           margin-top: 10px;
