--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ html .container-fluid main .box,
 body .container-fluid main .box {
   background-color: #1d1d1d;
   margin-top: 30px;
+  margin-bottom: 30px;
   padding: 20px;
 }
 html .container-fluid main .box .large-btn,
