--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,7 +42,7 @@ body {
       }
     }
   }
-  // Added classes from js
+  // Added classe from js
   .hide {
     visibility: hidden;
     height: 0px;
