--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,12 +3,14 @@
 html,
 body {
   height: 100%;
+  width: 100%;
   font-size: 12pt;
   .container-fluid {
     .test {
       background-color: $primarycolor;
       color: $textcolor;
       height: 100px;
+      margin: 0;
     }
     main {
       height: 100%;
