--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,7 +5,7 @@ body {
   height: 100%;
   font-size: 12pt;
   .container-fluid {
-    .test {
+    .header {
       background-color: $primarycolor;
       color: $textcolor;
       height: 100px;
@@ -14,6 +14,9 @@ body {
       height: 100%;
       color: $textcolor;
       background-color: $backgroundcolor;
+      .doneBox {
+        font-size: 2rem;
+      }
       .box {
         background-color: $boxcolor;
         margin-top: 30px;
@@ -41,6 +44,9 @@ body {
         }
       }
     }
+    .success {
+      animation: bg-color 5s linear infinite;
+    }
   }
   // Added classes from js
   .hide {
@@ -48,5 +54,40 @@ body {
     height: 0px;
     width: 0px;
     padding-top: 0px !important;
+  }
+  @keyframes bg-color {
+    0% {
+      background-color: rgb(255, 0, 0);
+    }
+    10% {
+      background-color: rgb(255, 153, 0);
+    }
+    20% {
+      background-color: rgb(179, 255, 0);
+    }
+    30% {
+      background-color: rgb(30, 255, 0);
+    }
+    40% {
+      background-color: rgb(0, 255, 136);
+    }
+    50% {
+      background-color: rgb(0, 255, 255);
+    }
+    60% {
+      background-color: rgb(0, 110, 255);
+    }
+    70% {
+      background-color: rgb(68, 0, 255);
+    }
+    80% {
+      background-color: rgb(183, 0, 255);
+    }
+    90% {
+      background-color: rgb(255, 0, 106);
+    }
+    100% {
+      background-color: rgb(255, 0, 0);
+    }
   }
 }
