--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 
 html,
 body {
+  min-height: 100vh;
   height: 100%;
   font-size: 12pt;
   .container-fluid {
@@ -11,6 +12,7 @@ body {
       height: 100px;
     }
     main {
+      min-height: 100vh;
       height: 100%;
       color: $textcolor;
       background-color: $backgroundcolor;
